--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <header class="aaa">
+  <header class="header">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
+    <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
   </header>
   <main class="centered-main-page-element">
     <section id="top-section-for-adding-element-to-list">
