--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <img src="./eisenhower-matrix.jpg">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
   </header>
-  <main class="centered-main-page-element">
-    <section id="top-section-for-adding-element-to-list">
+  <main class="main">
+    <section id="add-item-section">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task" class="task" type="text">
