--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <header class="header">
-    <img class="header__image" src="./eisenhower-matrix.jpg">
+    <img class="header__image" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
     <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
   </header>
   <main class="main">
@@ -26,7 +26,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Delete button">
           </button>
         </li>
         <li class="edit-mode">
@@ -49,7 +49,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Delete button">
           </button>
         </li>
       </ul>
