--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header class="header">
     <img class="header__image" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
   </header>
   <main class="main">
     <section id="add-item-section">
